Add CampusResource.java